fixes OpenAPI Description
