# src/main/resources/openapi.yaml
@@ -1,14 +1,30 @@
 openapi: "3.1.0"
 info:
-  title: Cashflow Register API
+  title: Cash flow Register API
+  description: A simple application for recording financial documents. From this database, it is possible to create a register of both sales and expense documents. The goal is effective monitoring of payables and receivables in order to maintain financial liquidity.
   version: "1.0"
+  license:
+    name: open-source license
+  contact:
+    name: Karolina Wilk
+    email: kar.wojcik95@gmail.com
+    url: www.linkedin.com/in/karwojcik95
 servers:
   - url: http://localhost:8080/api
+tags:
+  - name: analysis
+  - name: document
+  - name: payables
+  - name: receivables
+  - name: token
+
+
 paths:
   /register:
     get:
       summary: Summary of receivables and payables, 3 most valuable documents and contractors  from each category
       operationId: analysis
+      description: The method is responsible for collecting information from payables and receivables services. Information is generated by queries to repositories
       tags:
         - analysis
       responses:
@@ -24,6 +40,7 @@ paths:
     get:
       summary: Get all documents with optional search by any phrase, specify the page number and page size, and choose the column and sorting direction
       operationId: getAllDocuments
+      description: The method returns all entities from database
       tags:
         - document
       parameters:
@@ -76,6 +93,7 @@ paths:
     post:
       summary: Add new document to repository
       operationId: addDocument
+      description: The method adds a new object to the documents repository
       tags:
         - document
       requestBody:
@@ -112,6 +130,9 @@ paths:
     get:
       summary: Get a document by ID
       operationId: getDocumentById
+      description: The method finds an object in the repository and returns it
+      tags:
+        - document
       parameters:
         - name: id
           in: path
@@ -131,6 +152,9 @@ paths:
     delete:
       summary: Delete document by ID
       operationId: deleteDocumentById
+      description: The method finds an object in the repository and delete it
+      tags:
+        - document
       parameters:
         - name: id
           in: path
@@ -145,6 +169,9 @@ paths:
     put:
       summary: Update document by ID
       operationId: updateDocumentById
+      description: The method finds an object in the repository and updates the entire object with user data
+      tags:
+        - document
       parameters:
         - name: id
           in: path
@@ -166,6 +193,9 @@ paths:
     patch:
       summary: Update only part of document
       operationId: partialUpdateDocument
+      description: The method finds an object in the repository and updates part of the object. To properly work the method needs pointing type of operation - /replace, pointing which exactly field will be updated - /paymentAmount and new value - 2000.
+      tags:
+        - document
       parameters:
         - name: id
           in: path
@@ -207,6 +237,9 @@ paths:
     get:
       summary: List of filter results by specify various columns and value
       operationId: filter
+      description: The method filters the repository by specified columns to find values from user using CriteriaBuilder
+      tags:
+        - document
       parameters:
         - name: documentGroup
           in: query
@@ -305,7 +338,10 @@ paths:
   /register/receivables:
     get:
       summary: Get all receivables that are sales documents and not fully paid
-      operationId: showAll
+      operationId: showAllReceivables
+      description: The method returns all entities from database
+      tags:
+        - receivables
       responses:
         '200':
           description: Get list of all receivables
@@ -317,7 +353,10 @@ paths:
   /register/receivables/{id}:
     get:
       summary: Find receivable by ID
-      operationId: findById
+      operationId: findReceivableById
+      description: The method finds an object in the repository and returns it
+      tags:
+        - receivables
       parameters:
         - name: id
           description: ID of searching receivable
@@ -337,7 +376,10 @@ paths:
 
     patch:
       summary: Update only part of receivable. That field was created to put title of reminder or demand for payment
-      operationId: partialUpdateDocument
+      operationId: partialUpdateReceivable
+      description: The method finds an object in the repository and updates part of the object. To properly work the method needs pointing type of operation - /replace, pointing which exactly field will be updated - /reminderNumber and new value - "12/C/2024".
+      tags:
+        - receivables
       parameters:
         - name: id
           description: ID of searching receivable
@@ -378,7 +420,10 @@ paths:
   /register/receivables/overdue:
     get:
       summary: List of overdue receivables
-      operationId: createReportAboutOverdueReceivables
+      operationId:
+      description: The method uses a query in the repository to extract only those entities that are not paid in full and after the due date
+      tags:
+        - receivables
       responses:
         '200':
           description: List of overdue receivables
@@ -387,6 +432,9 @@ paths:
     get:
       summary: List of overdue receivables grouped by contractors
       operationId: createReportAboutOverdueReceivablesGrouped
+      description: The method uses a query in the repository to extract only those entities that are not paid in full and after the due date. The results are grouped by contractors name and the amount due is summarized
+      tags:
+        - receivables
       responses:
         '200':
           description: List of overdue receivables grouped by contractors
@@ -395,6 +443,9 @@ paths:
     get:
       summary: List of overdue receivables sorted by number of delay days
       operationId: createReportAboutOverdueReceivablesAging
+      description: The method sorts all entities in the repository by the column dueDate from oldest to newest.
+      tags:
+        - receivables
       responses:
         '200':
           description: List of overdue receivables sorted by number of delay days
@@ -402,7 +453,10 @@ paths:
   /register/payables:
     get:
       summary: Get all payables that are cost documents and not fully paid
-      operationId: showAll
+      operationId: showAllPayables
+      description: The method returns all entities from database
+      tags:
+        - payables
       responses:
         '200':
           description: Get list of all payables
@@ -414,7 +468,10 @@ paths:
   /register/payables/{id}:
     get:
       summary: Find payable by ID
-      operationId: findById
+      operationId: findPayableById
+      description: The method finds an object in the repository and returns it
+      tags:
+        - payables
       parameters:
         - name: id
           description: ID of searching payable
@@ -436,6 +493,9 @@ paths:
     get:
       summary: List of overdue payables
       operationId: createReportAboutOverduePayables
+      description: The method uses a query in the repository to extract only those entities that are not paid in full and after the due date
+      tags:
+        - payables
       responses:
         '200':
           description: List of overdue payables
@@ -444,6 +504,9 @@ paths:
     get:
       summary: List of overdue payables grouped by contractors
       operationId: createReportAboutOverduePayablesGrouped
+      description: The method uses a query in the repository to extract only those entities that are not paid in full and after the due date. The results are grouped by contractors name and the amount due is summarized
+      tags:
+        - payables
       responses:
         '200':
           description: List of overdue payables grouped by contractors
@@ -452,9 +515,43 @@ paths:
     get:
       summary: List of overdue payables sorted by number of delay days
       operationId: createReportAboutOverduePayablesAging
+      description: The method sorts all entities in the repository by the column dueDate from oldest to newest.
+      tags:
+        - payables
       responses:
         '200':
           description: List of overdue payables sorted by number of delay days
+
+  /token:
+    post:
+      summary: Generate token to authorize with bearer token
+      operationId: getToken
+      description: The method generates a token to authorize user. Enter username and role. The list of roles is limited to 3 roles - MANAGEMENT, DOCUMENT_CIRCULATION, CONTROLLING by creating a constant values.
+      tags:
+        - token
+      parameters:
+        - name: username
+          in: query
+          description: Field to enter name
+          required: true
+          schema:
+            type: string
+        - name: roles
+          in: query
+          description: Field to enter role
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The token is generated correctly
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          description: User enters a role outside of the defined roles
+
 
 
 components:
@@ -727,3 +824,9 @@ components:
           type: number
           format: decimal
           description: Amount paid
+  securitySchemes:
+    bearerHttpAuthentication:
+      description: Bearer token using a JWT
+      type: http
+      scheme: Bearer
+      bearerFormat: JWT
